--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,187 @@
-<p>home works!</p>
+<!-- <div class="full">
+<div class="overall">
+    <img src="assets/bookreading.jpg" alt="book here">
+
+
+
+
+    <div class="para1">
+        <h3>Deciding what to read next?</h3>
+        <p>You’re in the right place. Tell us what titles or genres you’ve enjoyed in the past, and we’ll give you surprisingly insightful recommendations.</p>
+    </div>
+    <div class="para2">
+        <h3>What are your friends reading?</h3>
+        <p>Chances are your friends are discussing their favorite (and least favorite) books on Goodreads.</p>
+    </div>
+    
+</div>
+
+
+<div class="authPart">
+    <div class="box1">
+       <h3>click here to login</h3>
+    </div>
+</div>
+
+
+
+</div> -->
+
+
+
+
+
+
+    <div class="section-1">
+        <div class="Section-1-text">
+            <!-- <center><h1>Welcome to Book Zone</h1>
+            <p>You can find out yours book here.</p>
+            <a href="/products.html" class="btn">Explore Here  <i class="fa fa-arrow-right" aria-hidden="true"></i> </a>
+           
+        </center> -->
+        <!-- .............................................. -->
+
+        <div class="center"><h1>Decentralized Library</h1>
+            <p>You can find out yours book here.</p>
+            <a routerLink='/products' class="btn">Explore Here  <i class="fa fa-arrow-right" aria-hidden="true"></i> </a>
+           
+        </div>
+
+
+
+
+        <!-- ............................................................ -->
+
+
+        </div>
+    </div>
+    <div class="section-2">
+        <h2>Featured Products</h2>
+        <!-- <a href="#"><img src="./images/img_2.jpg" alt=""> -->
+        <div class="gallery">
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_2.jpg" alt="img-1">
+                </a>
+                <!-- url("/assets/project-1.jpg" ) center top;++++++++++ -->
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_3.jpeg" alt="img-2">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_4.jpg" alt="img-3">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_5.jpg" alt="img-4">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_6.jpg" alt="img-5">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_7.jpg" alt="img-6">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_8.jpg" alt="img-7">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_9.jpg" alt="img-8">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_10.jpg" alt="img-9">
+                </a>
+            </div>
+            <div class="image-holder">
+                <a href="#">
+                    <img src="/assets/img_11.jpg" alt="img-10">
+                </a>
+            </div>
+
+
+        </div>
+
+    </div>
+    <!-- <div class="section-3">
+        <h3>Products</h3>
+        <br>
+        <div class="view-card">
+            <div class="card">
+                <center><img src="./images/img_11.jpg" alt="Avatar"></center>
+                <div class="container">
+                  <center>
+                    <h4><b>John Doe</b></h4> 
+                    <p>Architect & Engineer</p>
+                  </center> 
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/img_11.jpg" alt="Avatar">
+                <div class="container">
+                  <h4><b>John Doe</b></h4> 
+                  <p>Architect & Engineer</p> 
+                </div>
+            </div>
+
+        </div> -->
+
+   
+
+    <div class="section-4">
+        <h2>Featured Brands</h2>
+        <div class="brand">
+            <img src="/assets/parijat.jpg" alt="">
+        </div>
+        <div class="brand">
+            <img src="/assets/img_8.jpg" alt="">
+        </div>
+        <div class="brand">
+            <img src="/assets/img_7.jpg" alt="">
+        </div>
+        <div class="brand">
+            <img src="/assets/img_6.jpg" alt="">
+        </div>
+        <div class="brand">
+            <img src="/assets/img_5.jpg" alt="">
+        </div>
+    </div>
+
+    <!-- section-5 contact us  -->
+    <div class="section-5">
+        
+              <h2>Contact Us</h2>
+              <p>leave us a message or suggestion:</p>
+
+              <div class="column">
+                <form action="/index.html">
+                  <label for="fname">First Name</label>
+                  <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                  <label for="lname">Last Name</label>
+                  <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                  <label for="country">Country</label>
+                  <select id="country" name="country">
+                    <option value="india">India</option>
+                    <option value="australia">Australia</option>
+                    <option value="canada">Canada</option>
+                    <option value="usa">USA</option>
+                  </select>
+                  <label for="subject">Subject</label>
+                  <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+                  <input type="submit" value="Submit">
+                </form>
+              </div>
+
+    </div>
