--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,9 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li routerLinkActive="active current"><a routerLink="/register">register</a></li>
-                <li routerLinkActive="active current"><a routerLink="/login">Log In</a></li>
-            </ul>
-        </div>
+<nav class="navbar">
+    <div class="nav-right">
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/products.html">Products</a></li>
+        <li><a href="/About.html">About</a></li>
+        <li routerLinkActive="active current"><a routerLink='/login'>Login</a></li>
+        <li><a href="/Register.html">Create Account</a></li>
     </div>
 </nav>
